# tantivy-wasm

./: .gitignore  Cargo.toml  LICENSE  README.md  decoder.patch  package.json  tsconfig.json  webpack.config.js
src/: fetch_directory.rs  fetch_directory.ts  fetchdir.ts  index.scss  index.tsx  lib.rs  types.d.ts  util.ts  worker.ts
