[package]
name = "tantivy-wasm-vfs"
version = "0.1.0"
authors = ["phiresky <phireskyde+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
backtrace = "0.3.59"
serde_json = "1.0.64"
tantivy = {version="0.14.0", path="../tantivy", default-features=false, features=["wasm-bindgen"]}
wasm-bindgen = "0.2.74"

