[package]
name = "tantivy-wasm-vfs"
version = "0.1.0"
authors = ["phiresky <phireskyde+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
backtrace = "0.3.59"
console_error_panic_hook = "0.1.6"
once_cell = "1.7.2"
serde_json = "1.0.64"
tantivy = {version="0.14.0", path="../tantivy", default-features=false, features=["wasm-bindgen"]}
wasm-bindgen = "0.2.74"

[profile.release]
debug = 1
lto = true

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
dwarf-debug-info = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false # no debug info otherwise
